unpackaged/main/default/objects/Account/fields/Demo_Alpha_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Demo_Alpha_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Alpha Checkbox</label>
    <type>Checkbox</type>
</CustomField>