unpackaged/main/default/objects/Account/fields/Demo_Bravo_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Demo_Bravo_Picklist__c</fullName>
    <label>Demo Bravo Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>