unpackaged/main/default/objects/Account/fields/Test_Text_Box__c.field-meta.xml
<CustomField>
    <fullName>Test_Text_Box__c</fullName>
    <label>Test Text Box</label>
    <length>20</length>
    <type>Text</type>
</CustomField>